--- a/classes/IntegerConverter.cls
+++ b/classes/IntegerConverter.cls
@@ -1,9 +1,9 @@
 public with sharing class IntegerConverter implements IConverter {
-	public Object getValue(String input) {
-		try {
-			return Integer.valueOf(input);
-		} catch (Exception e) {
-			return null;
-		}
-	}
+    public Object getValue(String input) {
+        try {
+            return Integer.valueOf(input);
+        } catch (Exception e) { //committed
+            return null;
+        }
+    }
 }
